[gd_scene load_steps=4 format=2]

[ext_resource path="res://grid/precision/GridPrecision.tscn" type="PackedScene" id=1]
[ext_resource path="res://grid/precision/GridPrecisionCountdown.gd" type="Script" id=2]
[ext_resource path="res://ui/RetryButton.tscn" type="PackedScene" id=4]

[node name="GridPrecisionCountdown" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="MarginContainer" parent="HBoxContainer" index="0"]
margin_bottom = 594.0

[node name="VBoxContainer" parent="HBoxContainer" index="1"]
margin_top = 11.0
margin_bottom = 583.0

[node name="HBoxContainer" parent="HBoxContainer/VBoxContainer" index="1"]
margin_bottom = 520.0

[node name="PanelContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer" index="0"]
margin_bottom = 436.0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Toolbar" parent="HBoxContainer/VBoxContainer/HBoxContainer" index="1"]
margin_bottom = 436.0

[node name="VBoxContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer/Toolbar" index="0"]
margin_bottom = 421.0
custom_constants/separation = 20

[node name="SessionPanelFreeplay" parent="HBoxContainer/VBoxContainer/HBoxContainer/Toolbar/VBoxContainer" index="0"]
visible = false

[node name="RecordPanel" parent="HBoxContainer/VBoxContainer/HBoxContainer/Toolbar/VBoxContainer" index="1"]
margin_top = 0.0
margin_bottom = 198.0

[node name="ChessSettings" parent="HBoxContainer/VBoxContainer/HBoxContainer/Toolbar/VBoxContainer" index="2"]
margin_top = 218.0
margin_bottom = 356.0

[node name="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer/Toolbar/VBoxContainer" index="3"]
margin_top = 376.0
margin_bottom = 406.0

[node name="BotMargin" parent="HBoxContainer/VBoxContainer" index="2"]
margin_top = 524.0
margin_bottom = 572.0

[node name="ClickCountLabel" parent="TopBar" index="1"]
size_flags_horizontal = 10

[node name="TimeLabel" parent="TopBar" index="2"]
visible = true

[node name="Countdown" parent="CenterOverlay" index="0"]
margin_right = 160.0

[node name="RetryButton" parent="CenterOverlay" index="1" instance=ExtResource( 4 )]
margin_top = 20.0
margin_right = 160.0
margin_bottom = 52.0
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="Timer2" type="Timer" parent="." index="4"]
one_shot = true
[connection signal="pressed" from="CenterOverlay/RetryButton" to="." method="_on_RetryButton_pressed"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
